--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
 <!-- Stylesheet
     ================================================== -->
-<link rel="stylesheet" type="text/css"  href="css/style.css">
+
 <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
+<link rel="stylesheet" type="text/css"  href="css/style.css">
 <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
@@ -82,9 +83,9 @@
       <div class="col-md-12 text-center"><img src="img/about.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
-          <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Download Resume</a></p>
+          <p class="text-center"><strong>Hello my name is Amal Shukla</strong> and I'm a Web Developer from New Delhi, India.</p>
+          <p>My life majorly revolves around javascript.I like solving problems and let my code do the talking.Competitive programmer at heart.</p>
+          <p class="text-center"><a class="btn btn-primary" href="Resume.pdf" download="Amal-Resume"><i class="fa fa-download"></i> Download Resume</a></p>
         </div>
       </div>
     </div>
@@ -108,13 +109,13 @@
         <h4>jQuery</h4>
       </div>
       <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="80"> <span class="percent">80</span> </span>
-        <h4>WordPress</h4>
+        <h4>AngularJS</h4>
       </div>
-      <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="70"> <span class="percent">70</span> </span>
-        <h4>Photoshop</h4>
+      <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="70"> <span class="percent">65</span> </span>
+        <h4>NodeJS</h4>
       </div>
-      <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="65"> <span class="percent">65</span> </span>
-        <h4>Illustrator</h4>
+      <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="65"> <span class="percent">60</span> </span>
+        <h4>MongoDB</h4>
       </div>
     </div>
   </div>
@@ -126,91 +127,61 @@
       <h2>Portfolio</h2>
       <hr>
     </div>
-    <div class="categories">
+   <!--  <div class="categories">
       <ul class="cat">
         <li>
           <ol class="type">
             <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".web">Web Design</a></li>
-            <li><a href="#" data-filter=".app">App Development</a></li>
-            <li><a href="#" data-filter=".branding">Branding</a></li>
           </ol>
         </li>
       </ul>
       <div class="clearfix"></div>
-    </div>
+    </div> -->
     <div class="row">
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/airfinder-2.png" title="The product provides lower costs and improved efficiency through enterprise location management.I built it's front end using HTML,CSS,Bootstrap,Jquery." rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/01-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Airfinder</h4>
+                <small>Web Development</small> </div>
+              <img src="img/portfolio/airfinder-1.png" class="img-responsive" alt="Airfinder"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/02-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/jason-2.png" title="The project aims to connect teachers and students through an online portal providing assessments,assignments,etc.I was responsible for building it's front end using HTML,LESS,Bootstrap,Jquery." rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/02-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Jason Learning</h4>
+                <small>Web Development</small> </div>
+              <img src="img/portfolio/jason-1.png" class="img-responsive" alt="Jason Learning"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/03-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/patternex-2.png" title="Patternex aims to monitor the network traffic and provides analytics based on that data" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/03-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Patternex</h4>
+                <small>Web Development</small> </div>
+              <img src="img/portfolio/patternex-1.png" class="img-responsive" alt="Patternex"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/04-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/taskAssign-2.png" title="The application aims to track the project hours of a developer for client billing purpose.I was part of developing the whole application using HTML,SASS,php,MySQL." rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/04-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Task Assign Tracker</h4>
+                <small>Web Development</small> </div>
+              <img src="img/portfolio/taskAssign-1.png" class="img-responsive" alt="Task Assign Tracker"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/unity-2.png" title="The product aims to connect influencers with brands.I am currently a part of this team and the tech stack comprises of HTML,SASS,Bootstrap,Angular 4." rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/05-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Branding</small> </div>
-              <img src="img/portfolio/06-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding app">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development, Branding</small> </div>
-              <img src="img/portfolio/07-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Unity Influence</h4>
+                <small>Web Development</small> </div>
+              <img src="img/portfolio/unity-1.png" class="img-responsive" alt="Unity Influence"> </a> </div>
           </div>
         </div>
       </div>
@@ -218,7 +189,7 @@
   </div>
 </div>
 <!-- Achievements Section -->
-<div id="achievements" class="text-center">
+<!-- <div id="achievements" class="text-center">
   <div class="container">
     <div class="section-title center">
       <h2>Some Stats</h2>
@@ -247,7 +218,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Resume Section -->
 <div id="resume" class="text-center">
   <div class="container">
@@ -260,51 +231,21 @@
         <ul class="timeline">
           <li>
             <div class="timeline-image">
-              <h4>Feb 2013 <br>
+              <h4>July 2017 <br>
                 - <br>
                 Present </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">UX Developer</h4>
+                <h4>Quovantis Technologies</h4>
+                <h4 class="subheading">Front End Developer</h4>
               </div>
               <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <p>Worked on multiple projects comprising majorly of the front end stack including HTML,CSS,SASS,Bootstrap,Jquery,AngularJS(Angular 2+).Apart from that ,I possess intermediate knowledge of NodeJS and MongoDB.</p>
               </div>
             </div>
           </li>
-          <li class="timeline-inverted">
-            <div class="timeline-image">
-              <h4>Nov 2011 <br>
-                - <br>
-                Jan 2013 </h4>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">Front-end Developer</h4>
-              </div>
-              <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="timeline-image">
-              <h4>Dec 2009 <br>
-                - <br>
-                May 2011 </h4>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">UX Designer</h4>
-              </div>
-              <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
-              </div>
-            </div>
+          
           </li>
         </ul>
       </div>
@@ -323,49 +264,49 @@
           
           <li>
             <div class="timeline-image">
-              <h4>2010 <br>
+              <h4>2012 <br>
                 - <br>
-                2011 </h4>
+                2016 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Design University</h4>
-                <h4 class="subheading">Master Degree of Design</h4>
+                <h4>JSS ACADEMY OF TECHNICAL EDUCATION,NOIDA</h4>
+                <h4 class="subheading">Bachelor Of Technology</h4>
               </div>
               <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <p></p>
               </div>
             </div>
           </li>
           <li class="timeline-inverted">
             <div class="timeline-image">
-              <h4>2007 <br>
+              <h4>2011 <br>
                 - <br>
-                2010 </h4>
+                2012 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Design University</h4>
-                <h4 class="subheading">Bachelor Degree of Design</h4>
+                <h4>Indraprastha International School</h4>
+                <h4 class="subheading"> Intermediate Degree</h4>
               </div>
               <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p> -->
               </div>
             </div>
           </li>
           <li>
             <div class="timeline-image">
-              <h4>2004 <br>
+              <h4>2009 <br>
                 - <br>
-                2007 </h4>
+                2010 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>School Name</h4>
+                <h4>Indraprastha International School</h4>
                 <h4 class="subheading">High School Degree</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p> -->
               </div>
             </div>
           </li>
@@ -383,11 +324,11 @@
     </div>
     <div class="col-md-8 col-md-offset-2">
       <div class="col-md-4"> <i class="fa fa-map-marker fa-2x"></i>
-        <p>4321 California St,<br>
-          San Francisco, CA 12345</p>
+        <p>Dwarka,<br>
+          New Delhi, India 110075</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-envelope-o fa-2x"></i>
-        <p>info@company.com</p>
+        <p>shuklamal94@gmail.com</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-phone fa-2x"></i>
         <p> +1 123 456 1234</p>
@@ -420,12 +361,12 @@
       </form>
       <div class="social">
         <ul>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li><a target="_blank" href="https://www.facebook.com/amal199404"><i class="fa fa-facebook"></i></a></li>
+          <li><a target="_blank" href="https://twitter.com/shukla_amal"><i class="fa fa-twitter"></i></a></li>
+          <!-- <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
+          <li><a target="_blank" href="https://github.com/amal1994"><i class="fa fa-github"></i></a></li>
+          <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->
+          <li><a target="_blank" href="https://www.linkedin.com/in/amal-shukla-3831b593"><i class="fa fa-linkedin"></i></a></li>
         </ul>
       </div>
     </div>
