--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li class="hidden"> <a href="#page-top"></a> </li>
           <li> <a class="page-scroll" href="#about">About</a> </li>
           <li> <a class="page-scroll" href="#skills">Skills</a> </li>
-          <li> <a class="page-scroll" href="#portfolio">Portfolio</a> </li>
+          <!-- <li> <a class="page-scroll" href="#portfolio">Portfolio</a> </li> -->
           <li> <a class="page-scroll" href="#resume">Resume</a> </li>
           <li> <a class="page-scroll" href="#contact">Contact</a> </li>
         </ul>
@@ -121,12 +121,12 @@
   </div>
 </div>
 <!-- Portfolio Section -->
-<div id="portfolio">
+<!-- <div id="portfolio">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Portfolio</h2>
       <hr>
-    </div>
+    </div> -->
    <!--  <div class="categories">
       <ul class="cat">
         <li>
@@ -137,13 +137,13 @@
       </ul>
       <div class="clearfix"></div>
     </div> -->
-    <div class="row">
+    <!-- <div class="row">
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/airfinder-2.png" title="The product provides lower costs and improved efficiency through enterprise location management.I built it's front end using HTML,CSS,Bootstrap,Jquery." rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/airfinder-2.png" title="This project aims to create a chrome extension - Rest Client to make HTTP Get, Post, Put and Delete requests to a particular URL.Built using HTML,CSS,Jquery" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Airfinder</h4>
+                <h4>RestClient</h4>
                 <small>Web Development</small> </div>
               <img src="img/portfolio/airfinder-1.png" class="img-responsive" alt="Airfinder"> </a> </div>
           </div>
@@ -187,7 +187,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Achievements Section -->
 <!-- <div id="achievements" class="text-center">
   <div class="container">
