Portfolio section updated

--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
   </div>
 </div>
 <!-- Portfolio Section -->
-<!-- <div id="portfolio">
+<div id="portfolio">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Portfolio</h2>
       <hr>
-    </div> -->
+    </div> 
    <!--  <div class="categories">
       <ul class="cat">
         <li>
@@ -137,57 +137,49 @@
       </ul>
       <div class="clearfix"></div>
     </div> -->
-    <!-- <div class="row">
+    <div class="row">
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/airfinder-2.png" title="This project aims to create a chrome extension - Rest Client to make HTTP Get, Post, Put and Delete requests to a particular URL.Built using HTML,CSS,Jquery" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/rest-client-2.jpg" title="A chrome extension - Rest Client to make HTTP Get, Post, Put and Delete requests to a particular URL and show resposne.Built using HTML,CSS,Jquery." rel="prettyPhoto">
               <div class="hover-text">
                 <h4>RestClient</h4>
                 <small>Web Development</small> </div>
-              <img src="img/portfolio/airfinder-1.png" class="img-responsive" alt="Airfinder"> </a> </div>
+              <img src="img/portfolio/rest-client-1.jpg" class="img-responsive" alt="Airfinder"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/jason-2.png" title="The project aims to connect teachers and students through an online portal providing assessments,assignments,etc.I was responsible for building it's front end using HTML,LESS,Bootstrap,Jquery." rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/user-2.jpg" title="A small application to handle user posts and their information.Perform CRUD operations on user data.Built using HTML, CSS, Angular and https://jsonplaceholder.typicode.com for dummy data." rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Jason Learning</h4>
+                <h4>User Profile</h4>
                 <small>Web Development</small> </div>
-              <img src="img/portfolio/jason-1.png" class="img-responsive" alt="Jason Learning"> </a> </div>
+              <img src="img/portfolio/user-1.jpg" class="img-responsive" alt="Jason Learning"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/patternex-2.png" title="Patternex aims to monitor the network traffic and provides analytics based on that data" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/github-2.jpg" title="The application is a replica of Github Issues where users can track open/closed issues of a repository.Built using HTML, CSS, Angular and json web-api-token for user authentication at front end." rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Patternex</h4>
+                <h4>Github Issues</h4>
                 <small>Web Development</small> </div>
-              <img src="img/portfolio/patternex-1.png" class="img-responsive" alt="Patternex"> </a> </div>
+              <img src="img/portfolio/github-1.jpg" class="img-responsive" alt="Task Assign Tracker"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/taskAssign-2.png" title="The application aims to track the project hours of a developer for client billing purpose.I was part of developing the whole application using HTML,SASS,php,MySQL." rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Task Assign Tracker</h4>
-                <small>Web Development</small> </div>
-              <img src="img/portfolio/taskAssign-1.png" class="img-responsive" alt="Task Assign Tracker"> </a> </div>
-          </div>
-        </div>
+        
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/unity-2.png" title="The product aims to connect influencers with brands.I am currently a part of this team and the tech stack comprises of HTML,SASS,Bootstrap,Angular 4." rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/campgrounds-2.jpg" title="The application is a full stack application where user can add campgrounds with their information,can comment on the campgrounds.Users can perform CRUD on both campgrounds and their comments.User authentication is implemented so that the user who created the campground can only perform CRUD on it.Built using HTML, CSS, Node.js, MongoDB and passport.js for user authentication. The working url of project -  https://app-yelpcamp.herokuapp.com" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Unity Influence</h4>
+                <h4>Yelpcamp - Finding campgrounds near you</h4>
                 <small>Web Development</small> </div>
-              <img src="img/portfolio/unity-1.png" class="img-responsive" alt="Unity Influence"> </a> </div>
+              <img src="img/portfolio/campgrounds-1.jpg" class="img-responsive" alt="Unity Influence"> </a> </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div> -->
+</div>
 <!-- Achievements Section -->
 <!-- <div id="achievements" class="text-center">
   <div class="container">
