--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="about-text">
           <p class="text-center"><strong>Hello my name is Amal Shukla</strong> and I'm a Web Developer from New Delhi, India.</p>
           <p>My life majorly revolves around javascript.I like solving problems and let my code do the talking.Competitive programmer at heart.</p>
-          <p class="text-center"><a class="btn btn-primary" href="Resume.pdf" download="Amal-Resume"><i class="fa fa-download"></i> Download Resume</a></p>
+          <p class="text-center"><a class="btn btn-primary" href="Amal_Shukla.pdf" download="Amal-Resume"><i class="fa fa-download"></i> Download Resume</a></p>
         </div>
       </div>
     </div>
